--- a/package.json
+++ b/package.json
@@ -4,11 +4,95 @@
   "description": "generates random workouts",
   "main": "index.js",
   "dependencies": {
-    "npm-require": "^1.3.0"
+    "npm-require": "^1.3.0",
+    "requirejs": "^2.3.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "6.26.3",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-captains-log": "1.1.0",
+    "babel-plugin-istanbul": "4.1.6",
+    "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-module-resolver": "2.7.1",
+    "babel-plugin-rewire": "1.1.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-plugin-transform-react-jsx": "6.24.1",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-react": "6.24.1",
+    "babel-register": "6.26.0",
+    "babel-runtime": "6.23.0",
+    "babel-types": "6.26.0",
+    "chai": "4.0.2",
+    "chai-as-promised": "7.1.1",
+    "chai-dom": "1.8.0",
+    "chai-enzyme": "1.0.0-beta.1",
+    "chai-like": "1.1.1",
+    "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.5.1",
+    "css-loader": "0.28.11",
+    "deep-diff": "1.0.1",
+    "deep-freeze-strict": "1.1.1",
+    "dotenv": "5.0.1",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-15": "1.0.6",
+    "enzyme-react-intl": "2.0.0",
+    "eslint": "4.19.1",
+    "eslint-plugin-getsentry": "2.0.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-no-only-tests": "2.0.0",
+    "eslint-plugin-react": "7.3.0",
+    "file-loader": "1.1.11",
+    "html-replace-webpack-plugin": "2.5.2",
+    "html-webpack-plugin": "3.2.0",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "json-loader": "0.5.7",
+    "jsonfile": "3.0.0",
+    "karma": "3.1.4",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage": "1.1.2",
+    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-junit-reporter": "1.2.0",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-selenium-webdriver-launcher": "0.0.4",
+    "karma-sinon-chai": "2.0.2",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "4.0.0-beta.0",
+    "less": "2.7.2",
+    "less-loader": "4.1.0",
+    "md5-file": "4.0.0",
+    "mini-css-extract-plugin": "0.4.3",
+    "mocha": "4.1.0",
+    "progress-bar-webpack-plugin": "1.11.0",
+    "react-test-renderer": "15.5.4",
+    "redux-mock-store": "1.5.3",
+    "require-hacker": "3.0.1",
+    "script-loader": "0.7.2",
+    "selenium-webdriver": "4.0.0-alpha.1",
+    "serviceworker-webpack-plugin": "1.0.1",
+    "sinon": "5.1.1",
+    "sinon-chai": "3.2.0",
+    "source-map-loader": "0.2.3",
+    "spec-xunit-file": "0.0.1-3",
+    "style-loader": "0.21.0",
+    "svg-react-loader": "0.4.6",
+    "uglifyjs-webpack-plugin": "1.2.6",
+    "url-loader": "1.0.1",
+    "webpack": "4.28.1",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cleanup-plugin": "0.5.1",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.14",
+    "webpack-pwa-manifest": "4.0.0"
+  },
   "scripts": {
-    "test": "test"
+    "test-backup": "node node_modules/mocha/bin/mocha --recursive 'test/*Test.js' --compilers js:babel-register",
+    "test": "mkdir -p \"report/tests\" && env BABEL_ENV='test' XUNIT_FILE='report/tests/TESTS-NodeJS.xml' node node_modules/mocha/bin/mocha --compilers 'js:babel-register' --recursive 'test/*Test.js' -R spec-xunit-file"
   },
   "repository": {
     "type": "git",
