--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.2.0",
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "test-backup": "node node_modules/mocha/bin/mocha --recursive 'test/*Test.js' --compilers js:babel-register",
-    "test": "mkdir -p \"report/tests\" && env BABEL_ENV='test' XUNIT_FILE='report/tests/TESTS-NodeJS.xml' node node_modules/mocha/bin/mocha --compilers 'js:babel-register' --recursive 'test/*Test.js' -R spec-xunit-file"
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
