--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "requirejs": "^2.3.6"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -16,7 +17,8 @@
     "mocha": "^5.2.0"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-core/register",
+    "start": "./node_modules/.bin/babel  ./src --experimental --source-maps-inline -d ./dist && node ./dist/index"
   },
   "repository": {
     "type": "git",
