--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
+    "http-server": "^0.11.1",
     "mocha": "^5.2.0"
   },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register",
-    "start": "./node_modules/.bin/babel  ./src --experimental --source-maps-inline -d ./dist && node ./dist/index"
+    "start": "./node_modules/.bin/babel  ./src --experimental --source-maps-inline -d ./dist && node ./dist/make_workout"
   },
   "repository": {
     "type": "git",
