--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,6 +10,9 @@ phases:
     - echo "Build started on $(date)"
     - echo "Build module"
     - npm run test
+    - WEB_BUCKET=random-workout-generator-contentbucket-9ph9yu2y312f
+    - aws s3 sync ./build s3://$WEB_BUCKET/ --exclude index.html max-age=100000
+    - aws s3 cp ./build/index.html s3://$WEB_BUCKET/ --cache-control max-age=0
   post_build:
     commands:
     - echo "Build completed on $(date)"
